--- a/index.html
+++ b/index.html
@@ -607,12 +607,13 @@
               class="modal-form-input modal-form-feedback">
             </textarea>
           </label>
-          <input type="checkbox" name="contract" value="disagree" id="user-agreement" />
+            <input type="checkbox" name="contract" value="disagree" id="user-agreement" class="modal-form-checkbox" />
+          <span class="modal-form-check"></span>
           <label for="user-agreement" class="modal-form-agreement">
             Соглашаюсь с рассылкой и принимаю
-            <a class="agreement-accent">Условия договора</a>
+            <a class="agreement-accent" href="#">Условия договора</a>
           </label>
-          <button type="submit" class="btn modal-btn">Отправить</button>
+          <button type="submit" class="btn modal-btn flexy">Отправить</button>
         </form>
         <div class="flexy" data-modal-close>
           <svg class="modal-close-btn" width="18" height="18">
